# tree-sitter-highlight

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js
src/: lib.rs
