[package]
name = "node-tree-sitter-highlight"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
napi = "2"
napi-derive = "2"
lazy_static = "1.4"
tree-sitter-c = "0.20.2"
tree-sitter-typescript = "0.20.2"
tree-sitter-bash = { git = "https://github.com/tree-sitter/tree-sitter-bash" }
tree-sitter-eclair = { git = "https://github.com/luc-tielen/tree-sitter-eclair" }
tree-sitter-haskell = { git = "https://github.com/tree-sitter/tree-sitter-haskell" }
tree-sitter-llvm = { git = "https://github.com/luc-tielen/tree-sitter-llvm" }
tree-sitter-highlight = "0.20"

[build-dependencies]
napi-build = { version = "1" }

[profile.release]
opt-level = 3
lto = true
